Add navigation to layout

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,12 @@
 		<header>
 			<h1>Dictionary</h1>
 		</header>
+		<nav>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/word/new">Add Word</a></li>
+			</ul>
+		</nav>
 		<section class="content">
 			<%= yield %>
 		</section>
