--- a/views/word.erb
+++ b/views/word.erb
@@ -1,3 +1,6 @@
 <h3>Word Entry:</h3>
 <h3><%= @word.word_entry() %></h3>
-<a href="/definition/new">Add Definition</a>
+<% @word.definition_list().each() do |definition| %>
+	<p><%= definition.definition_entry() %></p>
+<% end %>
+<a href="/word/<%= @word.id() %>/definition/new">Add Definition</a>
