Add basic styling to pages

--- a/views/new_word_form.erb
+++ b/views/new_word_form.erb
@@ -1,7 +1,7 @@
 <form action='/' method='post'>
 	<div class="form-group">
 		<label for='word'>New Word</label>
-		<input id='word' name='word' type='text'>	
+		<input id='word' name='word' type='text' class="form-control">	
 	</div>
-	<button type="submit">Add Word</button>
+	<button type="submit" class="btn-success">Add Word</button>
 </form>
