--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,8 @@
 <head>
 	<title>Dictionary</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="/main.css">
 </head>
 <body>
 	<section class="main">
@@ -11,7 +13,7 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="/">Home</a></li>
+				<li><a href="/">All Words</a></li>
 				<li><a href="/word/new">Add Word</a></li>
 			</ul>
 		</nav>
