--- a/views/new_word_form.erb
+++ b/views/new_word_form.erb
@@ -2,7 +2,7 @@
 	<div class="form-group">
 		<label for='word'>New Word</label>
 		<input id='word' name='word' type='text' class="form-control">	
-		<label for='definition'>New Definition</label>
+		<label for='definition'>Definition</label>
 		<textarea id='definition' name='definition' type='text' class="form-control"></textarea>
 	</div>
 	<button type="submit" class="btn-success">Add Word</button>
