Add new word link to page bottom

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,4 +8,5 @@
 		<li><a href="/word/<%= word.id %>"><%= word.word_entry() %></a></li>
 		<% end %>	
 	</ul>
+	<a class="add" href="/word/new">Add New Word</a>
 </section>
