--- a/views/word.erb
+++ b/views/word.erb
@@ -6,5 +6,5 @@
 		<li><%= definition.definition_entry() %></li>
 	<% end %>
 	</ol>
-	<a href="/word/<%= @word.id() %>/definition/new">Add Definition</a>
+	<a class='add' href="/word/<%= @word.id() %>/definition/new">Add Definition</a>
 </section>
