--- a/views/new_word_form.erb
+++ b/views/new_word_form.erb
@@ -1,7 +1,7 @@
 <form action='/' method='post'>
 	<div class="form-group">
 		<label for='word'>New Word</label>
-		<input id='word' name='word' type='text' class="form-control">	
+		<input id='word' name='word' type='text' class="form-control" required>	
 		<label for='definition'>Definition</label>
 		<textarea id='definition' name='definition' type='text' class="form-control"></textarea>
 	</div>
