Add clear link to nav

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,7 @@
 			<ul>
 				<li><a href="/">All Words</a></li>
 				<li><a href="/word/new">Add Word</a></li>
+				<li><a href="/clear">Clear</li>
 			</ul>
 		</nav>
 		<section class="content">
